--- a/packages/web-ui/package.json
+++ b/packages/web-ui/package.json
@@ -21,6 +21,7 @@
     "build-storybook": "storybook build",
     "dev:tauri": "VITE_IS_TAURI=true vite",
     "build:tauri": "VITE_IS_TAURI=true vite build",
+    "tauri": "tauri",
     "build:dmg": "node scripts/build-dmg.js"
   },
   "dependencies": {
