--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -2,9 +2,14 @@ name: Release Tauri App
 
 on:
   workflow_dispatch:
+    inputs:
+      version:
+        description: 'Version to release (e.g., v1.0.0)'
+        required: true
+        type: string
   push:
-    branches:
-      - main
+    tags:
+      - 'v*'
 
 jobs:
   publish-tauri:
