--- a/packages/web-ui/package.json
+++ b/packages/web-ui/package.json
@@ -21,8 +21,7 @@
     "build-storybook": "storybook build",
     "dev:tauri": "cross-env VITE_IS_TAURI=true vite",
     "build:tauri": "cross-env VITE_IS_TAURI=true vite build",
-    "tauri": "tauri",
-    "build:dmg": "node scripts/build-dmg.js"
+    "tauri": "tauri"
   },
   "dependencies": {
     "@anatine/zod-mock": "^3.14.0",
