--- a/fly.toml
+++ b/fly.toml
@@ -53,8 +53,7 @@ SMTP_SECURE = "true"
 EMAIL_FROM = "noreply@auth.yuuinih.com"
 EMAIL_FROM_NAME = "阿卡迪亚永恒"
 
-# CORS configuration
-CORS_ORIGIN = "https://battle.yuuinih.com,https://test-battle.netlify.app"
+CORS_ORIGIN = "https://battle.yuuinih.com,https://test-battle.netlify.app,http://tauri.localhost"# CORS configuration
 
 # Cluster configuration
 CLUSTER_ENABLED = "true"
