--- a/packages/web-ui/src-tauri/Cargo.toml
+++ b/packages/web-ui/src-tauri/Cargo.toml
@@ -28,6 +28,7 @@ tauri-plugin-fs = "2"
 tauri-plugin-http = "2"
 
 tauri-plugin-process = "2"
+tauri-plugin-updater = "2"
 tokio = { version = "1", features = ["full"] }
 warp = "0.3"
 thiserror = "2"
