--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -90,7 +90,7 @@ jobs:
             ---
 
             **完整更新日志**: https://github.com/${{ github.repository }}/compare/v${{ github.event.before }}...${{ github.ref_name || inputs.version }}
-          releaseDraft: true
+          releaseDraft: false
           prerelease: false
           args: ${{ matrix.args }}
           projectPath: './packages/web-ui'
