--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -4,10 +4,13 @@ on:
   push:
     branches:
       - main
+  workflow_dispatch:
 
 permissions:
   contents: write
   pull-requests: write
+  actions: write
+  id-token: write
 
 jobs:
   release-please:
@@ -19,14 +22,12 @@ jobs:
       upload_url: ${{ steps.release.outputs.upload_url }}
     steps:
       - name: Run release-please
-        uses: google-github-actions/release-please-action@v4
+        uses: googleapis/release-please-action@v4
         id: release
         with:
-          release-type: node
-          package-name: arcadia-eternity
           # 自定义配置
           config-file: .github/release-please-config.json
-          manifest-file: .github/.release-please-manifest.json
+          manifest-file: .release-please-manifest.json
 
   # 当创建release时，自动合并到production分支
   merge-to-production:
