--- a/.github/release-please-config.json
+++ b/.github/release-please-config.json
@@ -5,7 +5,8 @@
       "bump-minor-pre-major": true,
       "bump-patch-for-minor-pre-major": true,
       "draft": false,
-      "prerelease": false
+      "prerelease": false,
+      "skip-labeling": true
     }
   },
   "group-pull-request-title-pattern": "chore: release ${version}",
