--- a/.github/workflows/deploy-flyio.yaml
+++ b/.github/workflows/deploy-flyio.yaml
@@ -1,7 +1,10 @@
 name: Deploy to Fly.io (Production)
 
 on:
-  # 只在手动触发或生产部署时运行
+  # 当production分支有push时自动部署
+  push:
+    branches: [production]
+  # 手动触发
   workflow_dispatch:
     inputs:
       environment:
@@ -15,9 +18,6 @@ on:
         description: 'Version to deploy'
         required: false
         type: string
-  # 当有新的release时自动部署
-  release:
-    types: [published]
 
 env:
   FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
