feat: use repository_dispatch to trigger production workflows
Since GitHub Actions workflows cannot trigger other workflows via standard events (push, release), use repository_dispatch which is specifically designed for this purpose. This avoids the limitations of GITHUB_TOKEN and workflow-created events.

--- a/.github/workflows/build-production-image.yml
+++ b/.github/workflows/build-production-image.yml
@@ -1,9 +1,8 @@
 name: Build Production Docker Image
 
 on:
-  push:
-    tags:
-      - 'v*'
+  repository_dispatch:
+    types: [production-release]
   workflow_dispatch:
     inputs:
       version:
