--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -68,6 +68,21 @@ jobs:
         run: |
           git push origin production
 
+      - name: Trigger production workflows via repository dispatch
+        uses: actions/github-script@v7
+        with:
+          script: |
+            await github.rest.repos.createDispatchEvent({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              event_type: 'production-release',
+              client_payload: {
+                version: '${{ needs.release-please.outputs.version }}',
+                tag_name: '${{ needs.release-please.outputs.tag_name }}'
+              }
+            });
+            console.log('Triggered production workflows via repository dispatch');
+
       - name: Create production deployment comment
         uses: actions/github-script@v7
         with:
