--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -1,13 +1,9 @@
 name: Release Tauri App
 
 on:
-  # 当有新release时自动构建
-  release:
-    types: [published]
-  # 也支持tag触发
-  push:
-    tags:
-      - 'v*'
+  # 通过repository_dispatch触发
+  repository_dispatch:
+    types: [production-release]
   # 手动触发
   workflow_dispatch:
     inputs:
