--- a/.github/workflows/deploy-development.yml
+++ b/.github/workflows/deploy-development.yml
@@ -1,16 +1,13 @@
 name: Deploy Development Environment
 
 on:
-  push:
+  # 等待开发环境Docker镜像构建完成
+  workflow_run:
+    workflows: ['Build and Push Docker Image']
+    types:
+      - completed
     branches: [main, master]
-    paths:
-      - 'packages/**'
-      - '!packages/web-ui/**'
-      - 'data/**'
-      - 'bin/**'
-      - 'pnpm-lock.yaml'
-      - 'package.json'
-      - 'Dockerfile'
+  # 手动触发
   workflow_dispatch:
 
 env:
@@ -18,65 +15,18 @@ env:
   IMAGE_NAME: ${{ github.repository }}
 
 jobs:
-  # 构建开发环境Docker镜像
-  build-dev-image:
+  # 部署开发环境（等待Docker镜像构建完成）
+  deploy-development:
     runs-on: ubuntu-latest
+    # 只有当Docker构建成功时才运行
+    if: ${{ github.event.workflow_run.conclusion == 'success' || github.event_name == 'workflow_dispatch' }}
     permissions:
       contents: read
-      packages: write
-    outputs:
-      image-digest: ${{ steps.build.outputs.digest }}
-      image-tags: ${{ steps.meta.outputs.tags }}
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-
-      - name: Log into GitHub Container Registry
-        uses: docker/login-action@v3
-        with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Extract metadata for Docker
-        id: meta
-        uses: docker/metadata-action@v5
-        with:
-          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
-          tags: |
-            type=ref,event=branch
-            type=sha,prefix={{branch}}-
-            type=raw,value=dev,enable={{is_default_branch}}
-
-      - name: Build and push development Docker image
-        id: build
-        uses: docker/build-push-action@v5
-        with:
-          context: .
-          file: ./Dockerfile
-          push: true
-          tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }}
-          build-args: |
-            NODE_ENV=development
-            BUILD_ENV=development
-            GITHUB_SHA=${{ github.sha }}
-            COMMIT_HASH=${{ github.sha }}
-
-  # 部署到开发环境（如果你有开发服务器的话）
-  # 这里可以添加部署到开发服务器的步骤
-  # 目前只构建镜像，生产环境使用Fly.io
-
-  notify-dev-build:
-    needs: build-dev-image
-    runs-on: ubuntu-latest
-    if: always()
-    steps:
-      - name: Notify development build status
+      - name: Notify development deployment
         run: |
-          echo "Development Docker image built successfully!"
-          echo "Image tags: ${{ needs.build-dev-image.outputs.image-tags }}"
-          echo "This image can be used for local development or testing."
+          echo "Development Docker image has been built successfully!"
+          echo "Image is ready for deployment to development environment."
           echo ""
-          echo "To run locally:"
+          echo "If you have a development server, you can deploy the image:"
           echo "docker run -p 8102:8102 ghcr.io/${{ github.repository }}:dev"
