chore: Enhance CI/CD workflows for production deployment
Adds a repository dispatch trigger to the build-production-image workflow to initiate production deployment after a successful build. Updates the deploy-flyio workflow to support deployment via repository_dispatch, improves version resolution logic, and adds debug output for workflow triggers. Refines the release workflow to better handle versioning from dispatch events and avoids creating duplicate releases.

--- a/.github/workflows/build-production-image.yml
+++ b/.github/workflows/build-production-image.yml
@@ -20,6 +20,7 @@ jobs:
     permissions:
       contents: read
       packages: write
+      actions: write
     outputs:
       image-digest: ${{ steps.build.outputs.digest }}
       image-tags: ${{ steps.meta.outputs.tags }}
@@ -82,3 +83,19 @@ jobs:
           echo "**Digest:** \`${{ steps.build.outputs.digest }}\`" >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
           echo "This image is ready for production deployment." >> $GITHUB_STEP_SUMMARY
+
+      - name: Trigger production deployment
+        uses: actions/github-script@v7
+        with:
+          script: |
+            await github.rest.repos.createDispatchEvent({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              event_type: 'deploy-production',
+              client_payload: {
+                version: '${{ steps.version.outputs.version }}',
+                image_digest: '${{ steps.build.outputs.digest }}',
+                image_tags: '${{ steps.meta.outputs.tags }}'
+              }
+            });
+            console.log('Triggered production deployment via repository dispatch');
