ci: Use double quotes in deploy-production dispatch event
Standardized string quoting to double quotes in the JavaScript step that triggers the production deployment via repository dispatch. This improves consistency and readability in the workflow script.

--- a/.github/workflows/build-production-image.yml
+++ b/.github/workflows/build-production-image.yml
@@ -91,11 +91,11 @@ jobs:
             await github.rest.repos.createDispatchEvent({
               owner: context.repo.owner,
               repo: context.repo.repo,
-              event_type: 'deploy-production',
+              event_type: "deploy-production",
               client_payload: {
-                version: '${{ steps.version.outputs.version }}',
-                image_digest: '${{ steps.build.outputs.digest }}',
-                image_tags: '${{ steps.meta.outputs.tags }}'
+                version: "${{ steps.version.outputs.version }}",
+                image_digest: "${{ steps.build.outputs.digest }}",
+                image_tags: "${{ steps.meta.outputs.tags }}"
               }
             });
-            console.log('Triggered production deployment via repository dispatch');
+            console.log("Triggered production deployment via repository dispatch");
