--- a/.github/workflows/build-production-image.yml
+++ b/.github/workflows/build-production-image.yml
@@ -86,16 +86,20 @@ jobs:
 
       - name: Trigger production deployment
         uses: actions/github-script@v7
+        env:
+          VERSION: ${{ steps.version.outputs.version }}
+          IMAGE_DIGEST: ${{ steps.build.outputs.digest }}
+          IMAGE_TAGS: ${{ steps.meta.outputs.tags }}
         with:
           script: |
             await github.rest.repos.createDispatchEvent({
               owner: context.repo.owner,
               repo: context.repo.repo,
-              event_type: "deploy-production",
+              event_type: 'deploy-production',
               client_payload: {
-                version: "${{ steps.version.outputs.version }}",
-                image_digest: "${{ steps.build.outputs.digest }}",
-                image_tags: "${{ steps.meta.outputs.tags }}"
+                version: process.env.VERSION,
+                image_digest: process.env.IMAGE_DIGEST,
+                image_tags: process.env.IMAGE_TAGS
               }
             });
-            console.log("Triggered production deployment via repository dispatch");
+            console.log('Triggered production deployment via repository dispatch');
