--- a/.github/workflows/build-production-image.yml
+++ b/.github/workflows/build-production-image.yml
@@ -18,7 +18,7 @@ jobs:
   build-production-image:
     runs-on: ubuntu-latest
     permissions:
-      contents: read
+      contents: write
       packages: write
       actions: write
     outputs:
