fix: Enhance version info
Added async functions to fetch version info from Tauri APIs when running in a Tauri environment. Updated VersionInfo.vue to use these async methods and refresh version data on mount. Updated release-please config to track web-ui package.json version. Bumped web-ui package version to 1.2.5.

--- a/.github/release-please-config.json
+++ b/.github/release-please-config.json
@@ -76,6 +76,11 @@
       "type": "json",
       "path": "packages/web-ui/src-tauri/tauri.conf.json",
       "jsonpath": "$.version"
+    },
+    {
+      "type": "json",
+      "path": "packages/web-ui/package.json",
+      "jsonpath": "$.version"
     }
   ]
 }
